# agent-hq

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  GEMINI.md  LICENSE  README.md  package.json  tsconfig.json  turbo.json
.drawit/: codebase-map.drawit  dependencies.drawit  flow-1772520013285.drawit  flow-1772521365837.drawit
.gemini/: GEMINI.md  settings.json
.github/workflows/: auto-version-bump.yml  publish-cli.yml  rust-ci.yml
apps/agent/: .env.example  com.agent-hq.agent.plist.example  discordBot.ts  eslint.config.mjs  governance.ts  index.ts  package.json  skills.ts  tsconfig.json
apps/agent/lib/: agentRoles.ts  agentTools.ts  bashAnalyzer.ts  cfoRouter.ts  chatSession.ts  chatTools.ts  codeGraphTools.ts  cooRouter.ts  delegationPlannerTool.ts  delegationTools.ts  delegationToolsVault.ts  evaluator.ts  executionModes.ts  filesystemPolicy.ts  harnessDelegate.ts  inbox.ts  (+12 more)
apps/discord-relay/: com.agent-hq.discord-relay.plist.example  daemon.sh  index.ts  package.json  relay-cli.sh  tsconfig.json
apps/hq-control-center/: .gitignore  Caddyfile  README.md  app.css  electron-builder.json5  index.html  package.json  tsconfig.json  vite.config.ts  webBridge.ts  ws-server.ts
apps/relay-adapter-discord/: package.json
apps/relay-adapter-googlechat/: package.json
apps/relay-adapter-telegram/: .gitignore  package.json
apps/relay-adapter-whatsapp/: .gitignore  package.json  tsconfig.json
apps/vscode-extension/: .vscodeignore  agent-hq-0.1.0.vsix  agent-hq-0.2.0.vsix  agent-hq-0.3.0.vsix  agent-hq-0.4.0.vsix  package.json  tsconfig.json
apps/website/: index.html  robots.txt  sitemap.xml
bridges/whatsapp/: index.ts  package.json
crates/hq-agent/: Cargo.toml
crates/hq-agent/src/: coding.rs  governance.rs  lib.rs  session.rs  tools.rs  worker.rs
crates/hq-cli/: Cargo.toml
crates/hq-cli/src/: main.rs
crates/hq-cli/src/commands/: agent.rs  agents.rs  benchmark.rs  chat.rs  clean.rs  config.rs  daemon.rs  diagram.rs  doctor.rs  env.rs  errors.rs  follow.rs  health.rs  init.rs  install.rs  jobs.rs  kill.rs  logs.rs  mcp.rs  memory.rs  mod.rs  orchestrate.rs  plans.rs  ps.rs  pwa.rs  restart.rs  search.rs  setup.rs  start.rs  status.rs  stop.rs  sync.rs  tasks.rs  teams.rs  tools.rs  uninstall.rs  update.rs  usage.rs  vault.rs
crates/hq-cli/src/commands/start/: agent.rs  common.rs  mod.rs
crates/hq-cli/src/commands/start/daemon/: helpers.rs  mod.rs  tasks_fast.rs  tasks_periodic.rs  tasks_scheduled.rs  tasks_slow.rs
crates/hq-cli/src/commands/start/harness/: builder.rs  hq.rs  mod.rs  ndjson.rs  runner.rs
crates/hq-cli/src/commands/start/relay/: discord.rs  mod.rs  telegram.rs
crates/hq-cli/src/commands/start/touchpoints/: conversation_learner.rs  folder_organizer.rs  frontmatter_fixer.rs  mod.rs  size_watchdog.rs  stale_thread_detector.rs  tag_suggester.rs
crates/hq-context/: Cargo.toml
crates/hq-context/src/: budget.rs  chunks.rs  compactor.rs  engine.rs  layers.rs  lib.rs  tokenizer.rs
crates/hq-core/: Cargo.toml
crates/hq-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/hq-daemon/: Cargo.toml
crates/hq-daemon/src/: cleanup.rs  embeddings.rs  health.rs  lib.rs  memory.rs  plans.rs  scheduler.rs
crates/hq-db/: Cargo.toml
crates/hq-db/sql/: 001_initial.sql  002_graph_links.sql  003_memory_system.sql
crates/hq-db/src/: lib.rs  migrations.rs  pool.rs  search.rs
crates/hq-llm/: Cargo.toml
crates/hq-llm/src/: lib.rs  models.rs  openrouter.rs  provider.rs
crates/hq-mcp/: Cargo.toml
crates/hq-mcp/src/: gateway.rs  lib.rs  registry.rs  server.rs
crates/hq-memory/: Cargo.toml
crates/hq-memory/src/: awake_replay.rs  consolidator.rs  db.rs  forgetter.rs  ingester.rs  lib.rs  ollama.rs  querier.rs  types.rs
crates/hq-relay/: Cargo.toml
crates/hq-relay-discord/: Cargo.toml
crates/hq-relay-discord/src/: bridge.rs  lib.rs
crates/hq-relay-telegram/: Cargo.toml
crates/hq-relay-telegram/src/: bridge.rs  lib.rs
crates/hq-sync/: Cargo.toml
crates/hq-sync/src/: crypto.rs  hash.rs  lib.rs  protocol.rs  scanner.rs  watcher.rs
crates/hq-tools/: Cargo.toml
crates/hq-tools/src/: agents.rs  benchmark.rs  browser.rs  drawit.rs  gws.rs  imagegen.rs  lib.rs  planning.rs  registry.rs  skills.rs  tts.rs  vault.rs  webmail.rs  workflow.rs
crates/hq-vault/: Cargo.toml
crates/hq-vault/src/: atomic_queue.rs  client.rs  frontmatter.rs  jobs.rs  lib.rs  notes.rs  query.rs  system.rs  tasks.rs  usage.rs
crates/hq-web/: Cargo.toml
crates/hq-web/src/: lib.rs
doc/plans/: 2026-03-19-paperclip-integration.md
docs/: plan-agentic-teams.md
homebrew/: hq.rb
openclaw-plugin/: index.ts  openclaw.plugin.json
openclaw-plugin/src/: client.ts  tools.ts
plugins/obsidian-vault-sync/: esbuild.config.mjs  main.js  manifest.json  package.json  styles.css  tsconfig.json
scripts/: agent-hq-chat.ts  agent-hq-daemon.ts  agent-hq-status.ts  hq-run.ts  hq.ts  install-launchd.sh  install-obsidian-plugin.sh  migrate-queues.ts  monitor-scheduled-tasks.ts  morning-brief-audio.ts  morning-brief-notebooklm.ts  morning-brief-prompt.md  notificationService.ts  openclaw-bridge.ts  orchestrator-bridge.ts  reindex-fts.ts  setup-gemini-plugins.sh  setup.ts  vault-icloud-bridge.ts
scripts/cleanup/: vaultCleanup.ts
scripts/daemon/: context.ts  healthAndCleanup.ts  heartbeat.ts  newsPulse.ts  noteLinking.ts  planMaintenance.ts
scripts/hooks/: pre-commit
scripts/hq/: mcpInstaller.ts  shared.ts
scripts/lib/: scheduler.ts
scripts/openclaw-bridge/: auth.ts  resultFilter.ts  routes.ts  types.ts
scripts/orchestrator-bridge/: audit.ts  auth.ts  routes.ts  types.ts
scripts/sblu/: circuitBreaker.ts  convert.sh  extract.ts  fix-fts-index.ts  retrain.ts  sbluClient.ts  sbluRegistry.ts  test-cartographer.ts  train.sh
scripts/touchpoints/: chains.ts  channelRouter.ts  engine.ts  types.ts
scripts/vault-workers/: auditLog.ts  index.ts  types.ts
scripts/workflows/: knowledge-analysis.ts  memory-consolidation.ts  model-tracker.ts  preference-tracker.ts  project-tracker.ts  statusHelper.ts  web-digest.ts
(+243 files in other folders)
