[workspace]
resolver = "2"
members = [
    "crates/hq-cli",
    "crates/hq-core",
    "crates/hq-vault",
    "crates/hq-db",
    "crates/hq-llm",
    "crates/hq-agent",
    "crates/hq-context",
    "crates/hq-daemon",
    "crates/hq-relay",
    "crates/hq-relay-discord",
    "crates/hq-relay-telegram",
    "crates/hq-mcp",
    "crates/hq-tools",
    "crates/hq-sync",
    "crates/hq-web",
    "crates/hq-memory",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/calvinmagezi/agent-hq-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# LLM
async-openai = "0.27"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# SQLite
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Markdown + frontmatter
pulldown-cmark = "0.12"
gray_matter = "0.2"

# File watching
notify = "7"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model"] }
poise = "0.6"

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["yaml", "env", "toml"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
rust-embed = "8"
hostname = "0.4"
trait-variant = "0.1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
regex = "1"

# Workspace crates (internal)
hq-core = { path = "crates/hq-core" }
hq-vault = { path = "crates/hq-vault" }
hq-db = { path = "crates/hq-db" }
hq-llm = { path = "crates/hq-llm" }
hq-agent = { path = "crates/hq-agent" }
hq-context = { path = "crates/hq-context" }
hq-daemon = { path = "crates/hq-daemon" }
hq-relay = { path = "crates/hq-relay" }
hq-relay-discord = { path = "crates/hq-relay-discord" }
hq-relay-telegram = { path = "crates/hq-relay-telegram" }
hq-mcp = { path = "crates/hq-mcp" }
hq-tools = { path = "crates/hq-tools" }
hq-sync = { path = "crates/hq-sync" }
hq-web = { path = "crates/hq-web" }
hq-memory = { path = "crates/hq-memory" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
