[package]
name = "hq-agent"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
hq-vault = { workspace = true }
hq-db = { workspace = true }
hq-llm = { workspace = true }
hq-context = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
glob = "0.3"
async-trait = { workspace = true }
