[package]
name = "hq-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hq"
path = "src/main.rs"

[dependencies]
hq-core = { workspace = true }
hq-vault = { workspace = true }
hq-db = { workspace = true }
hq-llm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
gray_matter = { workspace = true }
