[package]
name = "hq-context"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
hq-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
