[package]
name = "hq-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
hq-vault = { workspace = true }
hq-db = { workspace = true }
hq-llm = { workspace = true }
hq-memory = { workspace = true }
hq-sync = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
