[package]
name = "hq-llm"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
async-openai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
