[package]
name = "hq-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
hq-tools = { workspace = true }
hq-vault = { workspace = true }
hq-db = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
