[package]
name = "hq-relay-discord"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
hq-relay = { workspace = true }
serenity = { workspace = true }
poise = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
