[package]
name = "hq-vault"
version.workspace = true
edition.workspace = true

[dependencies]
hq-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pulldown-cmark = { workspace = true }
gray_matter = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
